feat(BackPack): nouvelle implémentation des coordonnées avec une liste de liste de Cell qui représente soit ContainsItem soit Locked soit Free + adaptation du code à cette implémentation